# s3-upload-mcp-server

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  TASKS.md  env.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: claude_desktop_config.json
src/s3_upload_mcp/: __init__.py  image_processor.py  models.py  s3_client.py  server.py  tools.py
tests/: __init__.py  conftest.py
tests/integration/: test_integration.py
tests/unit/: test_image_processor.py  test_s3_client.py  test_tools.py
